[tool.poetry]
name = "model-tester"
version = "0.1.0"
description = ""
authors = ["drobbins-ancile <dave.robbins@ancile.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual-dev = "^1.5.1"
langchain = "^0.1.9"
boto3 = "^1.34.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
